@startuml tb-strategy
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 0
skinparam defaultFontName "Lucida Grande"
skinparam dpi 150
skinparam class {
  BackgroundColor #FFFFCE
  BorderColor #000000
  BorderThickness 1
  ArrowColor #000000
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #000000
  HeaderBackgroundColor #FFFFCE
}
skinparam legendBackgroundColor #FFFFFF

title 그림 5-6 대응 — Strategy (환불 정책) / Context=RefundHandler
class RefundHandler <<Context>> {
  -strategy: RefundPolicy
  --
  +evaluateRefund(): RefundRequest
  +<color:red>setStrategy(RefundPolicy): void</color>
  +<color:red>getStrategy(): RefundPolicy</color>
}
interface RefundPolicy <<Strategy>> {
  +<color:red>calculateRefundAmount(): BigDecimal</color>
}
class NoRefundPolicy <<ConcreteStrategy>> {
  +calculateRefundAmount(): BigDecimal
}
class PartialRefundPolicy <<ConcreteStrategy>> {
  +calculateRefundAmount(): BigDecimal
}
class FullRefundPolicy <<ConcreteStrategy>> {
  +calculateRefundAmount(): BigDecimal
}
RefundHandler o--> RefundPolicy : -strategy
RefundPolicy <|.. NoRefundPolicy
RefundPolicy <|.. PartialRefundPolicy
RefundPolicy <|.. FullRefundPolicy
note bottom of RefundHandler
  iter4 정합: Context 가 -strategy 를 보유하고
  setStrategy() 로 교체, ContextMethod 는 보유 전략에 위임
end note
legend bottom
  <#FFFFCE>|= 표기 |= 의미 |
  |<#FFFFCE> 노란 박스 | iteration 1-3 기존 |
  | <color:red>빨강 테두리/글자</color> | iteration 4 신규/수정 |
endlegend
@enduml